# backbeat

./: .gitignore  LICENSE  README.md  README.org  rebar.config
apps/backbeat/src/: backbeat.app.src  backbeat_app.erl  backbeat_sup.erl  bb_fiddle.erl  bb_pattern.erl  bb_wav.erl  bbsynth.erl
bbsynth/: Cargo.toml
bbsynth/src/: lib.rs
bbsynth/src/synth/: delay.rs  envelope.rs  filter.rs  knob.rs  mod.rs  osc.rs  wav.rs
config/: sys.config  vm.args
examples/instruments/: basic
src/: backbeat_sup.erl  bb_fiddle.erl  bb_pattern.erl  bbsynth.erl  bbu.erl  user_default.erl
